--- a/newui.html
+++ b/newui.html
@@ -34,21 +34,34 @@
                 <div id="game-section" class="col-12 col-md-9">
                     
                     <div id="game-screen">
-                        GAME SCREEN <br>
-                        GAME SCREEN <br>
-                        GAME SCREEN <br>
-                        GAME SCREEN <br>
-                        GAME SCREEN <br>
-                        GAME SCREEN <br>
-                        GAME SCREEN <br>
-                        GAME SCREEN <br>
+                        <!--
+                        <div class="game-row">
+                            <div class="game-col"></div>
+                            <div class="game-col"></div>
+                            <div class="game-col"></div>
+                            <div class="game-col"></div>
+                        </div>
+                        <div class="game-row">
+                            <div class="game-col"></div>
+                            <div class="game-col"></div>
+                            <div class="game-col"></div>
+                            <div class="game-col"></div>
+                        </div>
+                        <div class="game-row">
+                            <div class="game-col"></div>
+                            <div class="game-col"></div>
+                            <div class="game-col"></div>
+                            <div class="game-col"></div>
+                        </div>
+                        -->
                     </div>
 
                     <div id="game-menu">
 
                         <div id="game-init-menu">
-                            <button class="btn btn-success"><i class="fa-solid fa-play"></i></button>
-                            <button class="btn btn-secondary"><i class="fa-solid fa-pause"></i></button>
+                            <button class="btn btn-danger"><i class="fa-solid fa-play"></i></button>
+                            <button class="btn btn-secondary disabled"><i class="fa-solid fa-pause"></i></button>
+                            <button id="game-select-speed" class="btn btn-success disabled">1x</button>
                         </div>
                         <!-- END OF GAME EDIT MENU -->
 
@@ -96,5 +109,7 @@
     </div>
     <!-- END OF CONTAINER -->
     
+    <!-- SCRIPTS -->
+    <script src="js/newui.js" type="text/javascript"></script>
 </body>
 </html>
