Added gameDOMController.changeInitButtonState() API

--- a/newui.html
+++ b/newui.html
@@ -59,9 +59,9 @@
                     <div id="game-menu">
 
                         <div id="game-init-menu">
-                            <button class="btn btn-danger"><i class="fa-solid fa-play"></i></button>
-                            <button class="btn btn-secondary disabled"><i class="fa-solid fa-pause"></i></button>
-                            <button id="game-select-speed" class="btn btn-success disabled">1x</button>
+                            <button id="game-button-init-end" class="btn btn-danger"><i class="fa-solid fa-play"></i></button>
+                            <button id="game-button-play-pause" class="btn btn-secondary"><i class="fa-solid fa-pause"></i></button>
+                            <button id="game-button-select-speed" class="btn btn-success">1x</button>
                         </div>
                         <!-- END OF GAME EDIT MENU -->
 
@@ -90,9 +90,7 @@
                         </div>
                         <!-- END OF GAME CONTROLLER MENU -->
 
-                        <div id="game-scoreboard">
-                            120
-                        </div>
+                        <div id="game-scoreboard"></div>
                             
                         <div id="dev-message">
                             Developed by @royastik27
